# 42_FdF

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  fdf
btree/: a.out  btree_no_root_with_duplicates.c  btree_no_root_with_duplicates_lines.c  btree_old.c  btree_old.c.nope
btree/a.out.dSYM/Contents/Resources/DWARF/: a.out
btree/tree_main/: b_line_tree.h  btree_of_lines_1.c  btree_of_lines_2.c
gnl/: get_next_line.h
includes/: btree_of_lines.h  fdf.h  get_next_line.h
libft/: CMakeLists.txt  Makefile  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strcfnr.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+27 more)
maps/: 3_then_1.fdf  3by4.fdf  4by3.fdf
minilibx_macos/: Makefile
src/: btree_of_lines_1.c  btree_of_lines_2.c  convert_coords.c  draw_parallel.c  draw_simple_line.c  event_handle.c  free_funcs.c  get_next_line.c  img_pixel_put.c  is_data_equal.c  line_list.c  main.c  points_dup.c  printables.c  re_draw.c  read_file.c  read_point_line.c  read_points.c  test.c  utilities.c
src/tree/: a.out  b_line_tree.c  b_line_tree.h  main_tree.c
src/tree/a.out.dSYM/Contents/Resources/DWARF/: a.out
