cmake_minimum_required(VERSION 3.14)
project(fdf C)
set(CMAKE_C_STANDARD 99)
aux_source_directory(src src)
include_directories(includes)
include_directories(libft)
add_subdirectory(libft)
add_executable(fdf  ${src})
target_link_libraries(fdf libft)
target_link_libraries(fdf minilibx_macos/libtrue_mlx.a)